api.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tldr-api-rc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tldr-api
    spec:
      containers:
      - name: tldr-api
        image: pkell/tldr-server
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: tldr-api-svc
  labels:
    app: tldr-api
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: tldr-api
