app.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tldr-app-rc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tldr-app
    spec:
      containers:
      - name: tldr-app
        image: nginxdemos/hello
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tldr-app-svc
  labels:
    app: tldr-app
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: tldr-app
