ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tldr-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: chmod775.org
    http:
      paths:
      - path: /app
        backend:
          serviceName: tldr-app-svc
          servicePort: 80
      - path: /api
        backend:
          serviceName: tldr-api-svc
          servicePort: 5000
